[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/sprites/fireman.png" type="Texture" id=1]
[ext_resource path="res://scenes/Fireman.gd" type="Script" id=2]
[ext_resource path="res://art/sfx/oh-yeah.ogg" type="AudioStream" id=3]
[ext_resource path="res://art/sfx/argh.ogg" type="AudioStream" id=4]
[ext_resource path="res://art/sfx/lets-go.ogg" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 87.5916
height = 214.514

[node name="Fireman" type="Area2D"]
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
trophy_sound = ExtResource( 3 )
death_sound = ExtResource( 4 )
start_sound = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SfxPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = 15.0

[connection signal="area_shape_entered" from="." to="." method="_on_Fireman_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_Fireman_body_entered"]
[connection signal="finished" from="SfxPlayer2D" to="." method="_on_SfxPlayer2D_finished"]
